MFH: Fixed bug #24313 (file_exist() warning on non-existent files when open_basedir is used).